Bug 1568473 - remove include of xp_qsort.h on Solaris. r=mkmelin DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D39158